dpf-ax changelog

	by <hackfin@section5.ch>
	Find details in the git or svn logs.

Thu, 23 Oct 2012
       by superelchi
       * New model:
         - intertronic (thx grouproot).

Wed, 17 Oct 2012
       by superelchi
       * New model:
         - sevendayshop_pebble (thx daveg).

Wed, 17 Oct 2012
       by superelchi
       * Added contrast support info to knowntypes.html.

Thu, 16 Oct 2012
v0.320 by superelchi
	* Support for model specific contrast init.
	* Dpf type definition moved from config.h to ./lcd/TYPE/dpfmodel.h.
	* New: knowntypes_builder.py builds type info from definitions in lcd/$(TYPE)/dpfmodel.h:
	  - fw/knowntypes.py - for use by identify.py
	  - fw/knowntypes.html - simple html page listing all supported dpfs.
	* Identify.py rewrite:
	  - Commandline options (-v = verbose, -d = developer support) replace manual dev_mode editing.
	  - Extended developer support by putting dump-snipppets and disassembler-scripts in folder fw/identify.out.
	  - Detection of default brightness / contrast value.
	  - Better identification of models mit non-standard init ("fake" CRC generation).
	  - Replaced knowdpfs.py with autogenerated knowntypes.py (see knowtypes_builder.py).
	* Shebang added to all python scripts in folder fw.
	* Hint to use hiddetach if dpf is claimed by hid added to rawusb.c
	* Modelname change:
	  - pearl -> pearl_portrait
	  - pearl_landscape -> pearl
	  - focal -> focal_portrait
	  - focal_landscape -> focal
	* New model:
	  - acme_2
	  - delightdigi_black_portrait
	  - jovisa
	  - linkdelight_2
	  - linkdelight_3
	  - pearl_custom

Fri, 27 Jul 2012
       by superelchi
	* Added contrast init for model delightdigi_black

Tue, 24 Jul 2012
       by superelchi
        * New models
          - acme_1 (thx RedoX)
          - copy_dp151_bw (by mrlinux)
          - dx27893_2 (by RedoX)

Wed, 11 Jul 2012
v0.314 by superelchi
	* New menuentry 'Setup - Screen Testpattern'
	  for judging lcd alignment/brightness/contrast. 