@@ -17,7 +17,9 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td></tr><tr><td>agk_violet</td><td>128 x 128</td><td>No</td><td></td><td></td></tr><tr><td>avlabs_avl969s</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.avlabs.net">Link</a>
 </td><td></td></tr><tr><td>blue</td><td>128 x 128</td><td>No</td><td><a href="http://www.dealextreme.com/details.dx/sku.27894">Link</a>
 </td><td>Buildin (generic) lcd-controller definition
-</td></tr><tr><td>coby_dp151_bw</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.ebay.com/itm/280828187564">Link</a>
+</td></tr><tr><td>carrefour_bfv151</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.mjshk.com/products/Digital%20Photo%20Frame/page/DPF815A_Max.htm">Link</a>
+<a href="http://www.prixing.fr/products/bfv151-1-5-pouce-cadre-photo-porte-cles-carrefour-3606605023771">Link</a>
+</td><td></td></tr><tr><td>coby_dp151_bw</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.ebay.com/itm/280828187564">Link</a>
 </td><td></td></tr><tr><td>coby_dp151_white</td><td>128 x 128</td><td>No</td><td><a href="http://www.frys.com/product/5439059">Link</a>
 </td><td></td></tr><tr><td>delightdigi_black</td><td>128 x 128</td><td>In menu</td><td></td><td>From ebay seller delight-digi
 </td></tr><tr><td>dx27893</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.dealextreme.com/p/1-5-lcd-rechargeable-digital-usb-photo-frame-keychain-white-107-picture-memory-storage-27893">Link</a>
