@@ -1,0 +1,75 @@
+	.include 'dpf.inc'
+
+	.area LCDAUX (CODE)
+
+_lcd_custom_init::
+	mov	p3dir,#0x0
+	anl	p1dir,#0xe8
+	anl	p2dir,#0xfd
+	setb	LCD_CS
+	clr	LCD_RST
+	mov	a,#0x96
+	lcall	X1547
+	setb	LCD_RST
+	mov	a,#0x96
+	lcall	X1547
+	clr	LCD_CS
+	mov	dptr,#_custom_initseq
+	ljmp	_lcd_init_by_table
+
+;
+X1547:	mov	r5,a
+X1548:	mov	r6,#0x18
+X154a:	mov	r7,#0xfa
+X154c:	djnz	r7,X154c
+	djnz	r6,X154a
+	djnz	r5,X1548
+	ret	
+;
+_lcd_custom_setcontrast::
+	ljmp	_lcd_set_contrast_by_table
+;	
+	.area LCDAUX (CODE)
+;
+_custom_contrasttbl::
+  .db  0x10, 0x1b, 0x20, 0x23, 0x26, 0x2a, 0x30
+_custom_contrasttbl_len::  .db  7
+
+_custom_contrasttbl2::
+  .db  0x71, 0x25, 0x91, 0x26, 0xff
+_custom_contrasttbl2_len::  .db  5
+
+_custom_contrasttbl2_offsets::
+  .db  0x03	;0x05 <- ??? offset > table length ???
+_custom_contrasttbl2_offsets_len::  .db  1
+
+_custom_backlighttbl::
+  .db  0x00, 0x0c, 0x18, 0x24, 0x30, 0x3c, 0x48, 0x54, 0x60, 0x6c
+  .db  0x78, 0x84, 0x90, 0x9c, 0xa8, 0xb4, 0xc0, 0xcc, 0xd8, 0xe4
+  .db  0xf0, 0xfc
+_custom_backlighttbl_len::  .db  22
+
+_custom_backlighttbl2::
+_custom_backlighttbl2_len::  .db  0
+
+_custom_initseq::
+  .db  0x71, 0x01, 0xb0, 0x96, 0x71, 0xd7, 0x91, 0x9f, 0x71, 0xe0
+  .db  0x91, 0x00, 0xb0, 0x0a, 0x71, 0xe3, 0xb0, 0x14, 0x71, 0xe1
+  .db  0x71, 0xca, 0x91, 0x06, 0x71, 0xc8, 0x91, 0x10, 0x71, 0xc9
+  .db  0x91, 0x20, 0x71, 0xf5, 0x91, 0x88, 0x71, 0xc5, 0x91, 0x21
+  .db  0x71, 0xd0, 0x91, 0x1d, 0x71, 0xc3, 0x91, 0x00, 0x71, 0xc4
+  .db  0x91, 0x06, 0x71, 0xc5, 0x91, 0x21, 0x71, 0xcb, 0x91, 0x01
+  .db  0x71, 0xcc, 0x91, 0x45, 0x71, 0xce, 0x91, 0x00, 0x71, 0xb7
+  .db  0x91, 0xc8, 0x71, 0xd0, 0x91, 0x1d, 0x71, 0xd7, 0x91, 0xbf
+  .db  0x71, 0xb5, 0x91, 0x01, 0x71, 0xcd, 0x91, 0x80, 0x71, 0xd0
+  .db  0x91, 0x1d, 0x71, 0xb4, 0x91, 0x18, 0x73, 0x11, 0x20, 0x38
+  .db  0x72, 0x13, 0x34, 0x71, 0x33, 0x93, 0x00, 0x80, 0x00, 0x71
+  .db  0x37, 0x91, 0x00, 0x71, 0x3a, 0x91, 0x05, 0x71, 0x36, 0x91
+  .db  0x00, 0x71, 0x29, 0x71, 0xb0, 0x91, 0x7f, 0x71, 0xb1, 0x91
+  .db  0x00, 0x71, 0xb3, 0x91, 0x00, 0x71, 0xc0, 0x92, 0x0e, 0x01
+  .db  0x71, 0xc6, 0x91, 0x00, 0x71, 0xb7, 0x91, 0xc8, 0x71, 0xf9
+  .db  0x98, 0x00, 0x02, 0x04, 0x06, 0x08, 0x0a, 0x0c, 0x0e, 0x98
+  .db  0x10, 0x12, 0x14, 0x16, 0x18, 0x1a, 0x1c, 0x1e, 0x71, 0x2a
+  .db  0x92, 0x00, 0x7f, 0x71, 0x2b, 0x92, 0x04, 0x83, 0x71, 0x2c
+  .db  0xff
+_custom_initseq_len::  .db  181
