@@ -3,6 +3,11 @@ dpf-ax changelog
 	by <hackfin@section5.ch>
 	Find details in the git or svn logs.
 
+Sat, 03 Nov 2012
+       by superelchi
+       * New model:
+         - carrefour_bfv151 (thx assas1).
+
 Thu, 23 Oct 2012
        by superelchi
        * New model:
